add lunarvim config-file

--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #10080e;
-@define-color base01 #322b30;
-@define-color base02 #544f53;
-@define-color base03 #767275;
-@define-color base04 #999598;
-@define-color base05 #bbb8ba;
-@define-color base06 #dddcdd;
+@define-color base00 #070f19;
+@define-color base01 #2a313a;
+@define-color base02 #4e545b;
+@define-color base03 #71767c;
+@define-color base04 #95989c;
+@define-color base05 #b8babd;
+@define-color base06 #dcddde;
 @define-color base07 #ffffff;
-@define-color base08 #c5a7a4;
-@define-color base09 #d4baac;
-@define-color base0A #dacec3;
-@define-color base0B #b4c3d8;
-@define-color base0C #8291cc;
-@define-color base0D #d7d3de;
-@define-color base0E #c5adc2;
-@define-color base0F #c7889d;
-@define-color base08a #961947;
-@define-color base09a #8d4e3b;
-@define-color base0Aa #a46236;
-@define-color base0Ba #4776ab;
-@define-color base0Ca #7787a9;
-@define-color base0Da #574e8d;
-@define-color base0Ea #9a8ba6;
-@define-color base0Fa #8b4d81;
+@define-color base08 #abc5ad;
+@define-color base09 #b6bec5;
+@define-color base0A #97afc6;
+@define-color base0B #9798c4;
+@define-color base0C #c7c1d3;
+@define-color base0D #b284cc;
+@define-color base0E #d3c0d8;
+@define-color base0F #ddd1da;
+@define-color base08a #628e67;
+@define-color base09a #6f858d;
+@define-color base0Aa #40698d;
+@define-color base0Ba #4f528d;
+@define-color base0Ca #84769f;
+@define-color base0Da #733e92;
+@define-color base0Ea #9d71a7;
+@define-color base0Fa #a688a0;
 
-@define-color base0Ddarker #756e82;
-@define-color base0Ddarkera #665F73;
-@define-color base0Ddarkeraa #575064;
-@define-color base0Ddarkeraaa #3E374B;
-@define-color base0Bgrey #9faabe;
-@define-color base0Bgreya #8e98ac;
-@define-color base0Bgreyaa #7d879a;
-@define-color base0Bgreyaaa #6b7488;
+@define-color base0Ddarker #705c84;
+@define-color base0Ddarkera #614D75;
+@define-color base0Ddarkeraa #523E66;
+@define-color base0Ddarkeraaa #39254D;
+@define-color base0Bgrey #9696b3;
+@define-color base0Bgreya #8586a2;
+@define-color base0Bgreyaa #737592;
+@define-color base0Bgreyaaa #616481;
