--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #10080e;
-@define-color base01 #322b30;
-@define-color base02 #544f53;
-@define-color base03 #767275;
-@define-color base04 #999598;
-@define-color base05 #bbb8ba;
-@define-color base06 #dddcdd;
+@define-color base00 #081439;
+@define-color base01 #2b3655;
+@define-color base02 #4f5772;
+@define-color base03 #72798e;
+@define-color base04 #959aaa;
+@define-color base05 #b8bcc6;
+@define-color base06 #dcdde3;
 @define-color base07 #ffffff;
-@define-color base08 #c5a7a4;
-@define-color base09 #d4baac;
-@define-color base0A #dacec3;
-@define-color base0B #9bb4d6;
-@define-color base0C #8190cb;
-@define-color base0D #d7d3de;
-@define-color base0E #c5adc2;
-@define-color base0F #c7889e;
-@define-color base08a #8e625a;
-@define-color base09a #aa7457;
-@define-color base0Aa #a98e74;
-@define-color base0Ba #4672ab;
-@define-color base0Ca #3c4d91;
-@define-color base0Da #6b598f;
-@define-color base0Ea #8e658b;
-@define-color base0Fa #8d435d;
+@define-color base08 #9f9b81;
+@define-color base09 #7caeae;
+@define-color base0A #9bafc2;
+@define-color base0B #6074b0;
+@define-color base0C #c1bacf;
+@define-color base0D #c4adce;
+@define-color base0E #9f72a9;
+@define-color base0F #ac82a9;
+@define-color base08a #5b5845;
+@define-color base09a #416969;
+@define-color base0Aa #546f8a;
+@define-color base0Ba #303c61;
+@define-color base0Ca #7e6f9b;
+@define-color base0Da #8a5e9e;
+@define-color base0Ea #5a3b61;
+@define-color base0Fa #694666;
 
-@define-color base0Ddarker #797183;
-@define-color base0Ddarkera #6A6274;
-@define-color base0Ddarkeraa #5B5365;
-@define-color base0Ddarkeraaa #423A4C;
-@define-color base0Bgrey #99a5bd;
-@define-color base0Bgreya #8894ac;
-@define-color base0Bgreyaa #77829a;
-@define-color base0Bgreyaaa #657088;
+@define-color base0Ddarker #7a6e93;
+@define-color base0Ddarkera #6B5F84;
+@define-color base0Ddarkeraa #5C5075;
+@define-color base0Ddarkeraaa #43375C;
+@define-color base0Bgrey #8088a6;
+@define-color base0Bgreya #6f7899;
+@define-color base0Bgreyaa #5e688b;
+@define-color base0Bgreyaaa #4c577c;
