--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #081439;
-@define-color base01 #2b3655;
-@define-color base02 #4f5772;
-@define-color base03 #72798e;
-@define-color base04 #959aaa;
-@define-color base05 #b8bcc6;
-@define-color base06 #dcdde3;
+@define-color base00 #120935;
+@define-color base01 #342c52;
+@define-color base02 #564f6f;
+@define-color base03 #78728c;
+@define-color base04 #9996a8;
+@define-color base05 #bbb9c5;
+@define-color base06 #dddce2;
 @define-color base07 #ffffff;
-@define-color base08 #9f9b81;
-@define-color base09 #7caeae;
-@define-color base0A #9bafc2;
-@define-color base0B #6074b0;
-@define-color base0C #c1bacf;
-@define-color base0D #c4adce;
-@define-color base0E #9f72a9;
-@define-color base0F #ac82a9;
-@define-color base08a #5b5845;
-@define-color base09a #416969;
-@define-color base0Aa #546f8a;
-@define-color base0Ba #303c61;
-@define-color base0Ca #7e6f9b;
-@define-color base0Da #8a5e9e;
-@define-color base0Ea #5a3b61;
-@define-color base0Fa #694666;
+@define-color base08 #878f69;
+@define-color base09 #6192bb;
+@define-color base0A #7992cd;
+@define-color base0B #b2aeca;
+@define-color base0C #d7ace9;
+@define-color base0D #cbb7d1;
+@define-color base0E #b18cad;
+@define-color base0F #cda4b5;
+@define-color base08a #414533;
+@define-color base09a #2f516d;
+@define-color base0Aa #365191;
+@define-color base0Ba #6a6297;
+@define-color base0Ca #a647cf;
+@define-color base0Da #93699f;
+@define-color base0Ea #714d6d;
+@define-color base0Fa #9c5673;
 
-@define-color base0Ddarker #7a6e93;
-@define-color base0Ddarkera #6B5F84;
-@define-color base0Ddarkeraa #5C5075;
-@define-color base0Ddarkeraaa #43375C;
-@define-color base0Bgrey #8088a6;
-@define-color base0Bgreya #6f7899;
-@define-color base0Bgreyaa #5e688b;
-@define-color base0Bgreyaaa #4c577c;
+@define-color base0Ddarker #816e93;
+@define-color base0Ddarkera #725F84;
+@define-color base0Ddarkeraa #635075;
+@define-color base0Ddarkeraaa #4A375C;
+@define-color base0Bgrey #a5a0bb;
+@define-color base0Bgreya #948eac;
+@define-color base0Bgreyaa #837c9e;
+@define-color base0Bgreyaaa #716a8f;
