--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #1d2021;
-@define-color base01 #3c3836;
-@define-color base02 #504945;
-@define-color base03 #665c54;
-@define-color base04 #bdae93;
-@define-color base05 #d5c4a1;
-@define-color base06 #ebdbb2;
-@define-color base07 #fbf1c7;
-@define-color base08 #fb4934;
-@define-color base09 #fe8019;
-@define-color base0A #fabd2f;
-@define-color base0B #b8bb26;
-@define-color base0C #8ec07c;
-@define-color base0D #83a598;
-@define-color base0E #d3869b;
-@define-color base0F #d65d0e;
-@define-color base08a #DB2914;
-@define-color base09a #DE6000;
-@define-color base0Aa #DA9D0F;
-@define-color base0Ba #989B06;
-@define-color base0Ca #6EA05C;
-@define-color base0Da #638578;
-@define-color base0Ea #B3667B;
-@define-color base0Fa #B63D00;
+@define-color base00 #282c34;
+@define-color base01 #353b45;
+@define-color base02 #3e4451;
+@define-color base03 #545862;
+@define-color base04 #565c64;
+@define-color base05 #abb2bf;
+@define-color base06 #b6bdca;
+@define-color base07 #c8ccd4;
+@define-color base08 #e06c75;
+@define-color base09 #d19a66;
+@define-color base0A #e5c07b;
+@define-color base0B #98c379;
+@define-color base0C #56b6c2;
+@define-color base0D #61afef;
+@define-color base0E #c678dd;
+@define-color base0F #be5046;
+@define-color base08a #C04C55;
+@define-color base09a #B17A46;
+@define-color base0Aa #C5A05B;
+@define-color base0Ba #78A359;
+@define-color base0Ca #3696A2;
+@define-color base0Da #418FCF;
+@define-color base0Ea #A658BD;
+@define-color base0Fa #9E3026;
 
-@define-color base0Ddarker #626e66;
-@define-color base0Ddarkera #535F57;
-@define-color base0Ddarkeraa #445048;
-@define-color base0Ddarkeraaa #2B372F;
-@define-color base0Bgrey #c0b765;
-@define-color base0Bgreya #b5ac5e;
-@define-color base0Bgreyaa #888240;
-@define-color base0Bgreyaaa #7d7939;
+@define-color base0Ddarker #4d7095;
+@define-color base0Ddarkera #3E6186;
+@define-color base0Ddarkeraa #2F5277;
+@define-color base0Ddarkeraaa #16395E;
+@define-color base0Bgrey #9bb394;
+@define-color base0Bgreya #708668;
+@define-color base0Bgreyaa #6f8467;
+@define-color base0Bgreyaaa #64795e;
