--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #282c34;
-@define-color base01 #353b45;
-@define-color base02 #3e4451;
-@define-color base03 #545862;
-@define-color base04 #565c64;
-@define-color base05 #abb2bf;
-@define-color base06 #b6bdca;
-@define-color base07 #c8ccd4;
-@define-color base08 #e06c75;
-@define-color base09 #d19a66;
-@define-color base0A #e5c07b;
-@define-color base0B #98c379;
-@define-color base0C #56b6c2;
-@define-color base0D #61afef;
-@define-color base0E #c678dd;
-@define-color base0F #be5046;
-@define-color base08a #C04C55;
-@define-color base09a #B17A46;
-@define-color base0Aa #C5A05B;
-@define-color base0Ba #78A359;
-@define-color base0Ca #3696A2;
-@define-color base0Da #418FCF;
-@define-color base0Ea #A658BD;
-@define-color base0Fa #9E3026;
+@define-color base00 #221e34;
+@define-color base01 #423e51;
+@define-color base02 #615e6e;
+@define-color base03 #817e8b;
+@define-color base04 #a09fa8;
+@define-color base05 #c0bfc5;
+@define-color base06 #dfdfe2;
+@define-color base07 #ffffff;
+@define-color base08 #878f69;
+@define-color base09 #6192bb;
+@define-color base0A #7992cd;
+@define-color base0B #b2aeca;
+@define-color base0C #d7ace9;
+@define-color base0D #cbb7d1;
+@define-color base0E #b18cad;
+@define-color base0F #cda4b5;
+@define-color base08a #414533;
+@define-color base09a #2f516d;
+@define-color base0Aa #365191;
+@define-color base0Ba #6a6297;
+@define-color base0Ca #a647cf;
+@define-color base0Da #93699f;
+@define-color base0Ea #714d6d;
+@define-color base0Fa #9c5673;
 
-@define-color base0Ddarker #4d7095;
-@define-color base0Ddarkera #3E6186;
-@define-color base0Ddarkeraa #2F5277;
-@define-color base0Ddarkeraaa #16395E;
-@define-color base0Bgrey #9bb394;
-@define-color base0Bgreya #708668;
-@define-color base0Bgreyaa #6f8467;
-@define-color base0Bgreyaaa #64795e;
+@define-color base0Ddarker #877692;
+@define-color base0Ddarkera #786783;
+@define-color base0Ddarkeraa #695874;
+@define-color base0Ddarkeraaa #503F5B;
+@define-color base0Bgrey #a7a3bb;
+@define-color base0Bgreya #9793ac;
+@define-color base0Bgreyaa #88829d;
+@define-color base0Bgreyaaa #77728e;
