--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #221e34;
-@define-color base01 #423e51;
-@define-color base02 #615e6e;
-@define-color base03 #817e8b;
-@define-color base04 #a09fa8;
-@define-color base05 #c0bfc5;
-@define-color base06 #dfdfe2;
-@define-color base07 #ffffff;
-@define-color base08 #878f69;
-@define-color base09 #6192bb;
-@define-color base0A #7992cd;
-@define-color base0B #b2aeca;
-@define-color base0C #d7ace9;
-@define-color base0D #cbb7d1;
-@define-color base0E #b18cad;
-@define-color base0F #cda4b5;
-@define-color base08a #414533;
-@define-color base09a #2f516d;
-@define-color base0Aa #365191;
-@define-color base0Ba #6a6297;
-@define-color base0Ca #a647cf;
-@define-color base0Da #93699f;
-@define-color base0Ea #714d6d;
-@define-color base0Fa #9c5673;
+@define-color base00 #001319;
+@define-color base01 #213237;
+@define-color base02 #435256;
+@define-color base03 #647174;
+@define-color base04 #859193;
+@define-color base05 #a6b0b1;
+@define-color base06 #c8d0d0;
+@define-color base07 #e9efee;
+@define-color base08 #20a371;
+@define-color base09 #8aa79d;
+@define-color base0A #018975;
+@define-color base0B #008484;
+@define-color base0C #75a7a8;
+@define-color base0D #43818c;
+@define-color base0E #3c97b2;
+@define-color base0F #a97c8a;
+@define-color base08a #375e48;
+@define-color base09a #4c665c;
+@define-color base0Aa #2e7063;
+@define-color base0Ba #217673;
+@define-color base0Ca #006a6a;
+@define-color base0Da #3a6369;
+@define-color base0Ea #3c727a;
+@define-color base0Fa #65597e;
 
-@define-color base0Ddarker #877692;
-@define-color base0Ddarkera #786783;
-@define-color base0Ddarkeraa #695874;
-@define-color base0Ddarkeraaa #503F5B;
-@define-color base0Bgrey #a7a3bb;
-@define-color base0Bgreya #9793ac;
-@define-color base0Bgreyaa #88829d;
-@define-color base0Bgreyaaa #77728e;
+@define-color base0Ddarker #426268;
+@define-color base0Ddarkera #335359;
+@define-color base0Ddarkeraa #24444A;
+@define-color base0Ddarkeraaa #0B2B31;
+@define-color base0Bgrey #6a9796;
+@define-color base0Bgreya #598787;
+@define-color base0Bgreyaa #497777;
+@define-color base0Bgreyaaa #376768;
