--- a/.xfiles/themes/colordef.css
+++ b/.xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #001319;
-@define-color base01 #213237;
-@define-color base02 #435256;
-@define-color base03 #647174;
-@define-color base04 #859193;
-@define-color base05 #a6b0b1;
-@define-color base06 #c8d0d0;
-@define-color base07 #e9efee;
-@define-color base08 #20a371;
-@define-color base09 #8aa79d;
-@define-color base0A #018975;
-@define-color base0B #008484;
-@define-color base0C #75a7a8;
-@define-color base0D #43818c;
-@define-color base0E #3c97b2;
-@define-color base0F #a97c8a;
-@define-color base08a #375e48;
-@define-color base09a #4c665c;
-@define-color base0Aa #2e7063;
-@define-color base0Ba #217673;
-@define-color base0Ca #006a6a;
-@define-color base0Da #3a6369;
-@define-color base0Ea #3c727a;
-@define-color base0Fa #65597e;
+@define-color base00 #0d1820;
+@define-color base01 #303940;
+@define-color base02 #525a60;
+@define-color base03 #757b80;
+@define-color base04 #979c9f;
+@define-color base05 #babdbf;
+@define-color base06 #dcdedf;
+@define-color base07 #ffffff;
+@define-color base08 #b29b9b;
+@define-color base09 #6fb2c8;
+@define-color base0A #58b1ce;
+@define-color base0B #82a5b4;
+@define-color base0C #6da4bd;
+@define-color base0D #80b3ca;
+@define-color base0E #99b3c4;
+@define-color base0F #a0a0b2;
+@define-color base08a #91746f;
+@define-color base09a #4090ab;
+@define-color base0Aa #318caa;
+@define-color base0Ba #748691;
+@define-color base0Ca #587f92;
+@define-color base0Da #56859d;
+@define-color base0Ea #3c738f;
+@define-color base0Fa #61788f;
 
-@define-color base0Ddarker #426268;
-@define-color base0Ddarkera #335359;
-@define-color base0Ddarkeraa #24444A;
-@define-color base0Ddarkeraaa #0B2B31;
-@define-color base0Bgrey #6a9796;
-@define-color base0Bgreya #598787;
-@define-color base0Bgreyaa #497777;
-@define-color base0Bgreyaaa #376768;
+@define-color base0Ddarker #607a88;
+@define-color base0Ddarkera #516B79;
+@define-color base0Ddarkeraa #425C6A;
+@define-color base0Ddarkeraaa #294351;
+@define-color base0Bgrey #9ba9b0;
+@define-color base0Bgreya #8999a1;
+@define-color base0Bgreyaa #788891;
+@define-color base0Bgreyaaa #667780;
