--- a/.config/X11/xfiles/themes/colordef.css
+++ b/.config/X11/xfiles/themes/colordef.css
@@ -1,33 +1,33 @@
-@define-color base00 #000e27;
-@define-color base01 #243046;
-@define-color base02 #495365;
-@define-color base03 #6d7584;
+@define-color base00 #000f27;
+@define-color base01 #243146;
+@define-color base02 #495465;
+@define-color base03 #6d7684;
 @define-color base04 #9298a2;
 @define-color base05 #b6bac1;
 @define-color base06 #dbdde0;
 @define-color base07 #ffffff;
-@define-color base08 #ac7c52;
-@define-color base09 #aa916e;
-@define-color base0A #9a8a6f;
-@define-color base0B #7f8e70;
-@define-color base0C #5a9c87;
-@define-color base0D #4f8c8a;
-@define-color base0E #4298b0;
-@define-color base0F #207ee2;
-@define-color base08a #77553a;
-@define-color base09a #80694b;
-@define-color base0Aa #6f634d;
-@define-color base0Ba #58624f;
-@define-color base0Ca #3e6b5d;
-@define-color base0Da #457a79;
-@define-color base0Ea #2e6578;
-@define-color base0Fa #206dca;
+@define-color base08 #ab7a50;
+@define-color base09 #ac8556;
+@define-color base0A #ad8f4f;
+@define-color base0B #a2a975;
+@define-color base0C #6ca283;
+@define-color base0D #638e88;
+@define-color base0E #40858b;
+@define-color base0F #2783de;
+@define-color base08a #775438;
+@define-color base09a #7d6144;
+@define-color base0Aa #786237;
+@define-color base0Ba #5c623d;
+@define-color base0Ca #4b765d;
+@define-color base0Da #43615d;
+@define-color base0Ea #38737a;
+@define-color base0Fa #165da3;
 
-@define-color base0Ddarker #4b6b73;
-@define-color base0Ddarkera #3C5C64;
-@define-color base0Ddarkeraa #2D4D55;
-@define-color base0Ddarkeraaa #14343C;
-@define-color base0Bgrey #90988f;
-@define-color base0Bgreya #7f8880;
-@define-color base0Bgreyaa #6d7772;
-@define-color base0Bgreyaaa #5b6562;
+@define-color base0Ddarker #4e656c;
+@define-color base0Ddarkera #3F565D;
+@define-color base0Ddarkeraa #30474E;
+@define-color base0Ddarkeraaa #172E35;
+@define-color base0Bgrey #9b9f8b;
+@define-color base0Bgreya #898e7d;
+@define-color base0Bgreyaa #777d6e;
+@define-color base0Bgreyaaa #656c5f;
